--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,9 +2,18 @@
     --clr-background: #fafafb;
     --clr-white: #fff;
     --clr-cta: #2F80ED;
+    --clr-cta-hover: #0d65d8;
     --clr-upload-background: #F6F8FB;
     --clr-upload-border: #97BEF4;
     --clr-text-primary: #4F4F4F;
     --clr-text-secondary: #828282;
     --clr-text-ternary: #BDBDBD;
+
+    --box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, .1);
+    --border-radius: 0.75rem;
+    --border-radius-small: 0.5rem;
+
+    --font-big: 1.125rem;
+    --font-medium: 0.75rem;
+    --font-small: 0.625rem;
 }
