--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,10 +7,12 @@
 }
 
 html {
-    font-family: Montserrat, sans-serif;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
 }
 
 body {
     min-height: 100vh;
     background-color: var(--clr-background); 
+    overflow: hidden;
 }
