--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,10 @@
+.container {
+    width: 100%;
+    max-width: 70rem;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
 .center {
     display: flex;
     align-items: center;
@@ -6,4 +13,10 @@
 
 .flex {
     display: flex; 
+}
+
+.sr-only {
+    position: absolute;
+    left: -9999px;
+    opacity: 0;
 }
