--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <main class="container">
-  <router-outlet></router-outlet>
+  <!-- <app-upload></app-upload> -->
+  <app-loading></app-loading>
 </main>
