--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,1 +1,4 @@
-<p>loading works!</p>
+<div class="loading">
+    <span class="loading__heading" role="alert" aria-busy="true">Uploading...</span>
+    <span aria-hidden="true" class="loading__line"></span>
+</div>
