--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@
     --clr-cta-hover: #0d65d8;
     --clr-upload-background: #F6F8FB;
     --clr-upload-border: #97BEF4;
+    --clr-gray: #F2F2F2;
     --clr-text-primary: #4F4F4F;
     --clr-text-secondary: #828282;
     --clr-text-ternary: #BDBDBD;
