finished styling uploaded section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main class="container">
-  <!-- <app-upload></app-upload> -->
+  <app-upload></app-upload>
   <!-- <app-loading></app-loading> -->
-  <app-uploaded></app-uploaded>
+  <!-- <app-uploaded></app-uploaded> -->
 </main>
