--- a/src/app/upload/upload.component.scss
+++ b/src/app/upload/upload.component.scss
@@ -4,6 +4,7 @@ section {
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
     width: 25rem;
+    margin: 0 auto;
 
     header {
         text-align: center;
