--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -15,6 +15,10 @@
     display: flex; 
 }
 
+.align-center {
+    align-items: center;
+}
+
 .sr-only {
     position: absolute;
     left: -9999px;
