--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,7 @@
     --clr-text-primary: #4F4F4F;
     --clr-text-secondary: #828282;
     --clr-text-ternary: #BDBDBD;
+    --clr-border: #E0E0E0;
 
     --box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, .1);
     --border-radius: 0.75rem;
