--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <main class="container">
-  <app-upload></app-upload>
-  <!-- <app-loading></app-loading> -->
-  <!-- <app-uploaded></app-uploaded> -->
+  <router-outlet></router-outlet>
 </main>
