--- a/src/app/upload/upload.component.scss
+++ b/src/app/upload/upload.component.scss
@@ -3,7 +3,7 @@ section {
     background-color: var(--clr-white);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
-    width: 25rem;
+    max-width: 25rem;
     margin: 0 auto;
 
     header {
