--- a/src/app/uploaded/uploaded.component.html
+++ b/src/app/uploaded/uploaded.component.html
@@ -1,5 +1,8 @@
 <section class="uploaded" #section>
-    <a routerLink="">&larr;</a>
+    <a routerLink="" aria-labelledby="text">
+      <span id="text" hidden>Go back to upload page</span>
+      &larr;
+    </a>
     <svg xmlns="http://www.w3.org/2000/svg" width="68" height="70" viewBox="0 0 68 70">
         <g id="Group_1" data-name="Group 1" transform="translate(-175 -169)">
           <g id="Ellipse_1" data-name="Ellipse 1" transform="translate(175 169)" fill="#219653" stroke="#219653" stroke-width="1">
